--- a/css/style.css
+++ b/css/style.css
@@ -1,16 +1,8 @@
-body {
-    width: 100%;
-}
-
-.bar {
-    background-color: #0f0f0f;
-}
-
-.container-fluid {
-    padding: 0;
-}
 
 .nav {
     font-size: 18px;
 }
 
+.container-fluid {
+    background-color: #0099FF;
+}
