--- a/css/style.css
+++ b/css/style.css
@@ -26,6 +26,7 @@ body {
     background-color: #0099FF;
     /*border-top: 1px solid black;*/
     /*border-bottom: 1px solid black;*/
+    /*Get these to work*/
 }
 
 .nav-tabs.nav-justified > li > a {
