--- a/css/style.css
+++ b/css/style.css
@@ -47,12 +47,13 @@ li > a:hover {
     color: black;
 }
 
-<<<<<<< Updated upstream
+
 .nav li {
     border-bottom: 3px solid black;
     border-top: 3px solid black;
     background-color: #DADDE0;
-=======
+}
+
 #top {
     background-color: black;
     height: 2.7em;
@@ -64,5 +65,4 @@ li > a:hover {
     margin-top: .25em;
     margin-right: .5em;
     float: right;
->>>>>>> Stashed changes
 }
