Add href to social media

--- a/css/style.css
+++ b/css/style.css
@@ -63,6 +63,6 @@ li > a:hover {
     height: 2em;
     width: 2em;
     margin-top: .25em;
-    margin-right: .5em;
+    margin-right: 3em;
     float: right;
 }
