--- a/css/style.css
+++ b/css/style.css
@@ -75,3 +75,28 @@ li > a:hover {
     margin-right: 3em;
     float: right;
 }
+
+#intro {
+    width: 100%;
+    background-color: white;
+    padding-left: 2em;
+    padding-top: 2em;
+    padding-bottom: 2em;
+    font-family: 'Oswald', sans-serif;
+    line-height: 1.7;
+    box-sizing: border-box;
+}
+
+#intro p {
+    display: block;
+    word-spacing: .10em;
+    font-size: 1.5em;
+    font-weight: lighter;
+}
+
+#intro h1 {
+    font-weight: bold;
+    font-size: 4em;
+    font-family: 'Oswald', sans-serif;
+    letter-spacing: .02em;
+}
