--- a/css/style.css
+++ b/css/style.css
@@ -20,13 +20,21 @@ body {
     /*background-color: */
 }
 
-#slideshow-container {
-    height: 5%;
+/*#slideshow-container {*/
+/*height: 5%;*/
+/*}*/
+
+.carousel-inner {
+    width: 100%;
+    max-height: 400px !important;
+}
+
+.carousel-inner > .item > img {
+    width: 200%;
 }
 
 .nav {
     font-size: 18px;
-    margin-bottom: 5%;
     /*border-top: 1px solid black;*/
     /*border-bottom: 1px solid black;*/
 }
