--- a/css/style.css
+++ b/css/style.css
@@ -8,10 +8,6 @@ body {
     background-color: #0f0f0f;
 }
 
-.container-fluid {
-    padding: 0;
-}
-
 #logo {
     padding: 5%;
 }
@@ -20,8 +16,17 @@ body {
     background: #0099FF url("../img/restaurant-cropped.jpg") center center;
 }
 
+#slideshow {
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 1200px;
+}
+
+.slideshow-container {
+    background-color: #FFF;
+}
+
 .carousel-inner {
-    width: 100%;
     max-height: 400px !important;
 }
 
@@ -36,7 +41,7 @@ body {
 }
 
 .container-fluid {
-    background-color: #0099FF;
+    background-color: #DADDE0;
     /*border-top: 1px solid black;*/
     /*border-bottom: 1px solid black;*/
     /*Get these to work*/
@@ -45,6 +50,10 @@ body {
 .nav-tabs.nav-justified > li > a {
     border-bottom: none;
     border-radius: 0;
+}
+
+footer > h4 {
+    padding: 5px;
 }
 
 
