--- a/css/style.css
+++ b/css/style.css
@@ -2,10 +2,15 @@ body {
     width: 100%;
     height: auto;
     margin-bottom: 0;
+    background-color: #FFF;
 }
 
 .bar {
     background-color: #0f0f0f;
+}
+
+.container-fluid {
+    background-color: #FFF;
 }
 
 #logo {
@@ -89,15 +94,18 @@ li > a:hover {
     float: right;
 }
 
+.row {
+    background-color: #FFF;
+}
+
 #intro {
-    width: 100%;
     background-color: white;
     padding-left: 2em;
     padding-top: 2em;
     padding-bottom: 2em;
     font-family: 'Oswald', sans-serif;
     line-height: 1.7;
-    box-sizing: border-box;
+    /*box-sizing: border-box;*/
 }
 
 #intro p {
@@ -114,7 +122,7 @@ li > a:hover {
     letter-spacing: .02em;
 }
 
-#beer {
+em {
     font-size: 1.1em;
     font-style: italic;
 }
