--- a/css/style.css
+++ b/css/style.css
@@ -100,12 +100,9 @@ li > a:hover {
 
 #intro {
     background-color: white;
-    padding-left: 2em;
-    padding-top: 2em;
-    padding-bottom: 2em;
+    padding: 2em;
     font-family: 'Oswald', sans-serif;
     line-height: 1.7;
-    /*box-sizing: border-box;*/
 }
 
 form {
@@ -117,6 +114,14 @@ form {
     word-spacing: .10em;
     font-size: 1.5em;
     font-weight: lighter;
+}
+
+#intro h1 {
+    font-weight: bold;
+    font-size: 4em;
+    font-family: 'Oswald', sans-serif;
+    letter-spacing: .02em;
+    padding: 0 0.25em;
 }
 
 h1 {
