--- a/css/style.css
+++ b/css/style.css
@@ -151,6 +151,13 @@ footer {
     width: 100%;
 }
 
+.store {
+    width: 300px;
+    height: 300px;
+    border: 3px solid black;
+    margin-top: 3em;
+}
+
 @media (max-width: 650px) {
     .nav li {
         border: 1px solid white;
