--- a/css/style.css
+++ b/css/style.css
@@ -5,10 +5,6 @@ body {
     background-color: #FFF;
 }
 
-.bar {
-    background-color: #0f0f0f;
-}
-
 .container-fluid {
     background-color: #FFF;
 }
@@ -156,6 +152,19 @@ footer {
     height: 300px;
     border: 3px solid black;
     margin-top: 3em;
+}
+
+h5 {
+    padding: 5px;
+}
+
+.left {
+    float: left;
+}
+
+.right {
+    float: right;
+    text-align: right;
 }
 
 @media (max-width: 650px) {
